# my_settings

./: .bash_aliases  .bash_aliases_work  .gvimrc  .sd_tcsh  .tcshrc  .td_bash  .td_tcsh  .tmux.conf  .vimrc  CMakeLists.txt  README  apt_upgrade.bash  dev-tmux.sh  fstab  init.vim  no_lsp.sh  plot.py  set_lsp.sh  trace.txt  update_cache.sh
.vim/: .comb.v  .for.v  .fsm.v  .netrwhist  .reg.v  .skeleton.cpp  .skeleton.tb  .skeleton.v  .skeleton.zim
backup_nvim/: init.vim
mpv/: input.conf  mpv.conf
nvim/: f5.vim  gdb.vim  init.lua  init.vim  netrw_mapping.vim  quickfix.vim
nvim/snippets/: autoi.cpp  class.cpp  copyright.cpp  debug.cpp  for_iter.cpp  fori.cpp  func.cpp  head.cpp  incguard.cpp  nvinitsk.cpp  nvmodule.h  nvtargsk.cpp  scmethod.cpp  scmodule.h  template.cpp  tlminitsk.cpp  tlmtargsk.cpp  tlmtransprep.cpp  tlmtranssend.cpp  while.cpp
nvim2/: gdb.vim
nvim2/lua/: .luarc.json
nvim2/plugin/: packer_compiled.lua
nvim2/undo/: %home%mkim%Dropbox%Notebooks%Notes%Home.txt  %home%mkim%Dropbox%Notebooks%Notes%Tax%2022.txt  %home%mkim%disk_media%Game_data%Heroes 2%fheroes2%.git%info%exclude  %home%mkim%disk_media%Game_data%Heroes 2%fheroes2%.gitignore  %home%mkim%disk_media%Game_data%Heroes2%fheroes2%.git%COMMIT_EDITMSG  %home%mkim%disk_media%Game_data%Heroes2%fheroes2%.git%info%exclude  %home%mkim%disk_media%Game_data%Heroes2%fheroes2%src%fheroes2%spell%spell.cpp  %home%mkim%disk_media%Game_data%Heroes2%fheroes2%src%fheroes2%spell%spell.h  (+37 more)
ranger/: README  rc.conf  rifle.conf
scripts/: audio-device-switch.sh  insitu-minsoo.sh  nhendown.py  reboot_required.sh
(+24 files in other folders)
